Prevented couple cards on the tree from overflowing text based on person's names.  Also caused the names to have ellipses.

--- a/src/assets/tree.css
+++ b/src/assets/tree.css
@@ -44,7 +44,7 @@
     position:relative;
     z-index: 800;
 }
-.name-line {float:left; font-size: 16px; width:100%; overflow:hidden}
+.name-line {float:left; font-size: 16px; width:100%; overflow:hidden; max-width: 245px; text-overflow:ellipsis}
 .couple-icon {
     border-radius: 50%;
     width: 28px;
